# maf-coder

./: .gitignore  AGENTS.md  AGENT_TOOLS_SPEC.md  ARCHITECTURE.md  CLAUDE.md  MAF-Coder_v2_Build_Plan.md  README.md  SMOKE_TEST.md  WORKED_EXAMPLE.md  agent_team_soul_v3.1.md  pyproject.toml
.github/workflows/: ci.yml
config/: droid_whispering.mimo.yaml  droid_whispering.test4.yaml  droid_whispering.yaml  rust_sandbox.dockerfile
docs/: FIRST_RUN_RUNBOOK.md  MAF_CODER_EXECUTION_PLAN.md  MAF_CODER_MASTER_PLAN.md  PILOTDECK_SMART_ROUTER_FUSION.md
prompts/: behavior_validator.md  coder_worker.md  orchestrator.md  research_worker.md  review_validator.md  security_worker.md
scripts/: build_sandbox.sh  check_endpoints.py  live_smoke.py  smoke_test.py
src/maf_coder/: __init__.py  cli.py
src/maf_coder/agents/: __init__.py  _sdk.py  base.py  behavior.py  coder.py  errors.py  orchestrator.py  permissions.py  research.py  results.py  review.py  security.py
src/maf_coder/agents/tools/: __init__.py  behavior_tools.py  coder_tools.py  orchestrator_tools.py  research_tools.py  review_tools.py  security_tools.py
src/maf_coder/blackboard/: __init__.py  artifact_store.py  event_log.py
src/maf_coder/integrations/: __init__.py  vcs.py
src/maf_coder/memory/: __init__.py  injection.py  paths.py  retrieval.py  retro.py  store.py
src/maf_coder/metrics/: __init__.py  baseline.py
src/maf_coder/models/: __init__.py  router.py  tier_router.py
src/maf_coder/orchestrator/: __init__.py  budget.py  checkpoint_store.py  inbox.py  mission_driver.py  preflight.py  project_profiler.py  push.py  recovery.py  scheduler.py  status_report.py  supervisor.py
src/maf_coder/sandbox/: __init__.py  client.py
src/maf_coder/sanitizer/: __init__.py  core.py
src/maf_coder/schemas/: __init__.py  common.py  contract.py  external.py  handoff.py  lifecycle.py  memory.py  message.py  pr.py  profile.py  routing.py  task.py  verdict.py
src/maf_coder/validators/: __init__.py  arbitration.py
src/maf_coder/validators/probes/: __init__.py  backend.py  base.py  cli.py  embedded.py  library.py  registry.py  wasm.py
tests/: test_artifact_store.py  test_cli.py  test_event_log.py  test_live_smoke.py  test_router.py  test_sanitizer.py  test_schemas.py  test_smart_router_integration.py  test_tier_router.py
tests/agents/: test_agent_errors.py  test_base_agent.py  test_behavior_agent.py  test_behavior_tools.py  test_coder_agent.py  test_coder_tools.py  test_memory_injection.py  test_orchestrator_agent.py  test_orchestrator_tools.py  test_permissions.py  test_research_agent.py  test_research_tools.py  test_results.py  test_review_agent.py  test_review_tools.py  test_security_agent.py  test_security_tools.py
tests/integrations/: test_vcs.py
tests/memory/: test_retrieval.py  test_retro.py  test_save_retro_tool.py  test_store.py
tests/metrics/: test_baseline.py
tests/orchestrator/: test_arbitration.py  test_budget.py  test_inbox.py  test_mission_driver.py  test_preflight.py  test_project_profiler.py  test_recovery.py  test_resume.py  test_scheduler.py  test_status_report.py  test_supervisor.py  test_validator_chain.py
tests/sandbox/: test_docker_sandbox.py  test_local_shell_sandbox.py  test_restore_snapshot.py
tests/validators/: test_probes.py
