[project]
name = "maf-coder"
version = "0.1.0"
description = "Multi-Agent Framework for Coder — production-grade Rust coding agent team"
requires-python = ">=3.11"
readme = "README.md"
license = { text = "MIT" }

dependencies = [
  # Agent orchestration
  "openai-agents>=0.3.0",       # OpenAI Agents SDK (handoffs / guardrails / tracing)
  "litellm>=1.50.0",            # Multi-provider routing (Anthropic / OpenAI / Google / ...)

  # Data layer
  "pydantic>=2.7.0",            # Schemas (Message / Task / Handoff / Contract / ...)
  "pyyaml>=6.0",                # Read droid_whispering.yaml, contracts, profiles

  # Runtime
  "gitpython>=3.1",             # git worktree / tag / commit management
  "docker>=7.0",                # Sandbox container control
  "rich>=13.0",                 # CLI output + log formatting
  "typer>=0.12",                # CLI framework
]

[project.optional-dependencies]
dev = [
  "pytest>=8.0",
  "pytest-asyncio>=0.23",
  "pytest-cov>=5.0",
  "ruff>=0.6",
  "mypy>=1.10",
  "types-pyyaml",
]

[project.scripts]
maf-coder = "maf_coder.cli:app"  # CLI entrypoint, implemented in Phase B

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/maf_coder"]

# ---------- Ruff ----------
[tool.ruff]
line-length = 100
target-version = "py311"
src = ["src"]

[tool.ruff.lint]
select = [
  "E", "F",   # pycodestyle + pyflakes
  "I",        # isort
  "N",        # pep8-naming
  "UP",       # pyupgrade
  "B",        # bugbear
  "RUF",      # ruff-specific
  "SIM",      # simplify
  "PT",       # pytest style
]
ignore = ["E501"]  # line length handled by formatter

# ---------- Pytest ----------
[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
pythonpath = ["src"]
addopts = "-ra -q --strict-markers"

# ---------- Mypy ----------
[tool.mypy]
python_version = "3.11"
strict = true
ignore_missing_imports = true
files = ["src/maf_coder"]
