[project]
name = "maf-coder"
version = "0.1.0"
description = "Multi-Agent Framework for Coder — production-grade Rust coding agent team"
requires-python = ">=3.11"
readme = "README.md"
license = { text = "MIT" }

dependencies = [
  # Agent orchestration
  "openai-agents>=0.3.0",       # OpenAI Agents SDK (handoffs / guardrails / tracing)
  "litellm>=1.50.0",            # Multi-provider routing (Anthropic / OpenAI / Google / ...)

  # Data layer
  "pydantic>=2.7.0",            # Schemas (Message / Task / Handoff / Contract / ...)
  "pyyaml>=6.0",                # Read droid_whispering.yaml, contracts, profiles

  # Runtime
  "gitpython>=3.1",             # git worktree / tag / commit management
  "docker>=7.0",                # Sandbox container control
  "rich>=13.0",                 # CLI output + log formatting
  "typer>=0.12",                # CLI framework
]

[project.optional-dependencies]
dev = [
  "pytest>=8.0",
  "pytest-asyncio>=0.23",
  "pytest-cov>=5.0",
  "ruff>=0.6",
  "mypy>=1.10",
  "types-pyyaml",
]

[project.scripts]
maf-coder = "maf_coder.cli:app"  # CLI entrypoint, implemented in Phase B

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/maf_coder"]

# ---------- Ruff ----------
[tool.ruff]
line-length = 100
target-version = "py311"
src = ["src"]

[tool.ruff.lint]
select = [
  "E", "F",   # pycodestyle + pyflakes
  "I",        # isort
  "N",        # pep8-naming
  "UP",       # pyupgrade
  "B",        # bugbear
  "RUF",      # ruff-specific
  "SIM",      # simplify
  "PT",       # pytest style
]
ignore = [
  "E501",   # line length handled by formatter
  "RUF002", # ambiguous unicode chars in docstrings (CJK content is intentional)
  "RUF022", # __all__ unsorted — public API ordering is curated, not alphabetic
  "UP042",  # Enum(str, Enum) — keep classic form for cross-version Pydantic compat
]

[tool.ruff.lint.per-file-ignores]
"src/maf_coder/cli.py" = ["B008"]  # typer.Option in defaults is idiomatic
"tests/**" = ["B017", "PT011", "F841"]  # broad test patterns are acceptable

# ---------- Pytest ----------
[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
pythonpath = ["src"]
addopts = "-ra -q --strict-markers"

# ---------- Mypy ----------
[tool.mypy]
python_version = "3.11"
strict = true
ignore_missing_imports = true
# `# type: ignore` comments around the OpenAI Agents SDK are conditional —
# they're necessary when the SDK isn't installed and become "unused" when it
# is. Disable the warning so both code paths type-check.
warn_unused_ignores = false
files = ["src/maf_coder"]
